--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -26,6 +26,8 @@ url: "https://gauravtendolkar.github.io" # the base hostname & protocol for your
 twitter_username: 
 github_username:  gauravtendolkar
 
+show_excerpts: true
+
 # Build settings
 theme: minima
 plugins:
